<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <view
        android:id="@+id/view4"
        class="com.google.android.youtube.player.YouTubePlayerView"
        id="@+id/view3"
        android:layout_width="219dp"
        android:layout_height="104dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <Button
        android:id="@+id/youtubebutton"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_marginBottom="60dp"
        android:text="@string/watch_video"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.408"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="348dp"
        android:layout_height="94dp"
        android:layout_marginTop="46dp"
        android:layout_marginBottom="307dp"
        android:text="@string/great_job_making_the_aarthi_burger"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textView11"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="268dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="134dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="114dp"
        app:layout_constraintBottom_toTopOf="@+id/youtubebutton"
        app:layout_constraintEnd_toEndOf="@+id/textView11"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/aarthichef"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="223dp"
        android:layout_height="64dp"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginBottom="48dp"
        android:text="@string/interested_in_learning_more"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/view4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        tools:textColor="@android:color/black" />

</android.support.constraint.ConstraintLayout>